--- a/.github/workflows/build-issue.yaml
+++ b/.github/workflows/build-issue.yaml
@@ -1,8 +1,10 @@
 name: issues
 
 on:
-  issues:
-      types: [opened, edited]
+  # Runs on pushes targeting the default branch
+  push:
+    branches:
+      - main
 
 env:
   REPO_URL: https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}
