--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -30,7 +30,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: main
-          path: build/main.pdf
-  script:
-    # Feel free to change the mv target to something else. You will need to update the index.html though
-    - mv main.pdf build/main.pdf
+          path: ./build
