--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -31,5 +31,7 @@ jobs:
         with:
           name: main
           path: main.pdf
+
+      - name: move
         run: mv main.pdf build/main.pdf
 
