--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -30,4 +30,17 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: main
-          path: source/main.pdf
+          path: ./source/main.pdf
+
+  # Deployment job
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: my-artifact
+          path: ./source/main.pdf
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: ./source/main.pdf
