--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -31,3 +31,12 @@ jobs:
         with:
           name: main
           path: source/main.pdf
+
+  # Deployment job
+  release:
+  steps:
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        repository: ${{ secrets.owner }}/${{ secrets.repo }}
+        token: ${{ secrets.CUSTOM_TOKEN }}
