--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -34,6 +34,7 @@ jobs:
 
   # Deployment job
   release:
+    runs-on: ubuntu-latest
     steps:
       - name: Release
         uses: softprops/action-gh-release@v1
